syntax = "proto3";

enum OsType {
    OS_TYPE_UNSPECIFIED = 0;
    LINUX = 1;
    WINDOWS = 2;
}